--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
+    "dev": "set NODE_ENV=development&& nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "set NODE_ENV=production&& node dist/index.js",
+    "start:dev": "set NODE_ENV=development&& node dist/index.js"
   },
   "author": "Ismael Yumipanta",
   "license": "ISC",
